Do not use exesive z-index and use 100vh for body for preventing overflow

--- a/src/components/CameraInterface/CameraInterface.scss
+++ b/src/components/CameraInterface/CameraInterface.scss
@@ -3,7 +3,7 @@
 
   &__footer {
     position: fixed;
-    z-index: 10;
+    z-index: 1;
     bottom: 30px;
     width: 100%;
     text-align: center;
